[tool.poetry]
name = "sphinx-documentation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sphinx_documentation"}]

[tool.poetry.dependencies]
python = "^3.11"
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
